--- a/html/sep_27/assignment/ques_1.html
+++ b/html/sep_27/assignment/ques_1.html
@@ -42,6 +42,16 @@
             font-size: 20;
         }
 
+        #sel{
+            border-radius: 10px;
+            background-color: black;
+            color: white;
+            height: 35px;
+            width: 275px;
+            font-size: 21 ;
+        }
+        
+
     </style>
 </head>
 <body style="background-color: black;">
@@ -55,6 +65,12 @@
             <br><br>
             <input class="inp" id="txtbox" type="password" placeholder="Password" required>
             <br><br>          
+            <select id="sel">
+                <option>City</option>
+                <option>Nagpur</option>
+                <option>Gondia</option>
+                <option>Chandrapur</option>
+            </select>
             <br><br><br><br>
             <input class="inp" id="regbox" type="submit" value="Register">
         </form>
