All previous code

--- a/html/sep_27/assignment/ques_2.html
+++ b/html/sep_27/assignment/ques_2.html
@@ -67,6 +67,24 @@
     <div class="div2">
         <img src="/" alt="leaf">
         <h2>Create an account</h2>
+        <h2>Welcome</h2>
+        <p class="font"><i>Let's create your account</i></p><br><br><br>
+        <form action="">
+            <input class="inp" id="txtbox" type="text" placeholder="Full Name" required>
+            <br><br>
+            <input class="inp" id="txtbox" type="text" placeholder="Email" required>
+            <br><br>
+            <input class="inp" id="txtbox" type="password" placeholder="Password" required>
+            <br><br>          
+            <select id="sel">
+                <option>City</option>
+                <option>Nagpur</option>
+                <option>Gondia</option>
+                <option>Chandrapur</option>
+            </select>
+            <br><br><br><br>
+            <input class="inp" id="regbox" type="submit" value="Register">
+        </form>
     </div>
 
 
