--- a/html/sep_27/assignment/ques_2.html
+++ b/html/sep_27/assignment/ques_2.html
@@ -5,25 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        select{
+            font-size: 15pt;
+            height: 35px;
+            width: 280px;
+            border-radius: 10px;
+            border: 2px solid;
+        }
         .bod{
             background-color: plum;
         }
-        .bubble{
-            position: absolute;
-            border-radius: 50%;
-            background-color: rgba(163, 133, 42, 0.644);
-            z-index: 0;
+
+        .inp{
+            font-size: 30;
+            border-radius: 5%;
         }
-        .bubble:nth-child(0){
-            width: 20px;
-            height: 20;
-            top: 50%;
-            left: 5%;
+        #txtbox{
+            color: white;
+            font-size: 15pt;
+            height: 35px;
+            width: 275px;
+            border-radius: 10px;
+            background-color: white;
+        }
+        #regbox{
+            color: white;
+            font-size: 15pt;
+            height: 35px;
+            width: 275px;
+            border-radius: 10px;
+            background: linear-gradient(to right, magenta,skyblue);
+            background-color: #267ed2;
         }
         .div1{
             position: absolute;
             border-radius: 3%;
-            background-color: white;
+            background-color: plum;
             margin-left: 5%;
             margin-top: 5%;
             height: 600px;
@@ -33,6 +50,7 @@
             text-align: center;
             position: absolute;
             border-radius: 3%;
+            background: linear-gradient(to top, plum, lavender);
             background-color: white;
             margin-left: 65%;
             margin-top: 5%;
@@ -40,35 +58,44 @@
             width: 450px;
         }
         .div3{
+            font-size: 17pt;
+            text-align: center;
             position: absolute;
-            border-radius: 3%;
-            background-color: green;
-            margin-left: 4%;
-            margin-top: 6%;
-            height: 500px;
-            width: 350px;
+            border-radius: 1%;
+            background: linear-gradient(to left, plum, lavender);
+            background-color: white;
+            margin-left: 0%;
+            margin-top: 0%;
+            height: 599px;
+            width: 390px;
         }
         .div4{
+            text-align: center;
             position: absolute;
-            border-radius: 3%;
-            background-color: black;
-            margin-left: 50%;
-            margin-top: 6%;
-            height: 500px;
-            width: 375px;
+            border-radius: 1%;
+            background: linear-gradient(to left, lavender, plum);
+            background-color: white;
+            margin-left: 48%;
+            margin-top: 0%;
+            height: 599px;
+            width: 415px;
         }
     </style>
 </head>
 <body class="bod">
     <div class="div1">
-        <div class="div3"></div>
-        <div class="div4"></div>
-    </div>
-    <div class="div2">
-        <img src="/" alt="leaf">
+        <div class="div3">
+            <br><br><br><br><br><br><br>
+            <img src="leaf.png" alt="leaf" height="100" width="100">
+            <br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam?
+        </div>
+        <div class="div4">
+            <img src="leaf.png" alt="leaf" height="50" width="50">
         <h2>Create an account</h2>
         <h2>Welcome</h2>
-        <p class="font"><i>Let's create your account</i></p><br><br><br>
+        <p class="font"><i>Let's create your account</i></p>
+        <img src="profile_pic.png" alt="profile pic" height="80" width="80">
         <form action="">
             <input class="inp" id="txtbox" type="text" placeholder="Full Name" required>
             <br><br>
@@ -82,7 +109,31 @@
                 <option>Gondia</option>
                 <option>Chandrapur</option>
             </select>
-            <br><br><br><br>
+            <p><input type="checkbox" name="checkbox" value="1">I agree to terms and conditions</p>
+            <input class="inp" id="regbox" type="submit" value="Register">
+        </form>
+        </div>
+    </div>
+    <div class="div2">
+        <img src="leaf.png" alt="leaf" height="50" width="50">
+        <h2>Create an account</h2>
+        <h2>Welcome</h2>
+        <p class="font"><i>Let's create your account</i></p>
+        <img src="profile_pic.png" alt="profile pic" height="80" width="80">
+        <form action="">
+            <input class="inp" id="txtbox" type="text" placeholder="Full Name" required>
+            <br><br>
+            <input class="inp" id="txtbox" type="text" placeholder="Email" required>
+            <br><br>
+            <input class="inp" id="txtbox" type="password" placeholder="Password" required>
+            <br><br>          
+            <select id="sel">
+                <option>City</option>
+                <option>Nagpur</option>
+                <option>Gondia</option>
+                <option>Chandrapur</option>
+            </select>
+            <p><input type="checkbox" name="checkbox" value="1">I agree to terms and conditions</p>
             <input class="inp" id="regbox" type="submit" value="Register">
         </form>
     </div>
